--- a/lib/templates/web/component.tsx.class.hbs
+++ b/lib/templates/web/component.tsx.class.hbs
@@ -13,7 +13,7 @@ import React, { Component } from "react";
 /**
 * {{ name }}
 */
-class {{ name }} extends Component<IProps> {
+class {{ camelcase name }} extends Component<IProps> {
 /**
 * Render
 */
@@ -28,4 +28,4 @@ return (
 );
 }
 }
-  export default {{name}};
+  export default {{camelcase name}};
