--- a/lib/templates/web/component.js.class.hbs
+++ b/lib/templates/web/component.js.class.hbs
@@ -9,7 +9,7 @@ import React, { Component } from "react";
 /**
 * {{ name }}
 */
-class {{ name }} extends Component {
+class {{ camelcase name }} extends Component {
   /**
   * Render
   */
@@ -26,4 +26,4 @@ class {{ name }} extends Component {
   }
 }
 
-export default {{name}};
+export default {{camelcase name}};
