--- a/lib/templates/web/container.js.class.hbs
+++ b/lib/templates/web/container.js.class.hbs
@@ -1,7 +1,7 @@
 import React from 'react'
-{{#if redux}}import {connect } from 'redux' {{/if}}
+{{#if redux}}import { connect } from 'react-redux' {{/if}}
 
-class {{name}} extends React.PureComponent {
+class {{camelcase name}} extends React.PureComponent {
   {{#if state}}
   constructor(props) {
     super(props)
@@ -44,8 +44,8 @@ class {{name}} extends React.PureComponent {
   const mapState = (state) => ({})
   const mapDispatch = (dispatch) => ({})
 
-  export default connect(mapState, mapDispatch)({{name}})
+  export default connect(mapState, mapDispatch)({{camelcase name}})
 
 {{else}}
-  export default {{name}}
+  export default {{camelcase name}}
 {{/if}}
