fix name camelcase

--- a/lib/templates/readme.md.hbs
+++ b/lib/templates/readme.md.hbs
@@ -1,7 +1,7 @@
-# {{ name }} Component
+# {{ camelcase name }} Component
 
 TODO: Document and add examples
 
 ```jsx
-<{{ name }}>Hello {{ name }}</{{ name }}>
+<{{ camelcase name }}>Hello {{ camelcase name }}</{{ camelcase name }}>
 ```
