--- a/lib/templates/stories.tsx.hbs
+++ b/lib/templates/stories.tsx.hbs
@@ -1,11 +1,11 @@
-// {{name}}.stories.js
+// {{camelcase name}}.stories.js
 import React from 'react';
-import {{name}} from './index';
+import {{camelcase name}} from './index';
 
 export default {
-  component: {{name}},
-  title: '{{name}}',
+  component: {{camelcase name}},
+  title: '{{camelcase name}}',
 };
 
-export const Default = () => <{{name}} />;
-export const WithContent = () => <{{name}} content={'Storybook of {{name}}'} />;
+export const Default = () => <{{camelcase name}} />;
+export const WithContent = () => <{{camelcase name}} content={'Storybook of {{camelcase name}}'} />;
