--- a/lib/templates/test.tsx.hbs
+++ b/lib/templates/test.tsx.hbs
@@ -1,11 +1,11 @@
 import React from "react";
 import { shallow, ShallowWrapper } from "enzyme";
 
-import {{ name }}, { IProps } from "./index";
+import {{ camelcase name }}, { IProps } from "./index";
 
 // Todo: expected this file will grow.
 
-describe('{{name}}', () => {
+describe('{{camelcase name}}', () => {
   let component: ShallowWrapper<IProps>;
   let props: IProps;
 
@@ -16,7 +16,7 @@ describe('{{name}}', () => {
 
 
   function givenComponent() {
-    component = shallow(<{{name}} {...props} />);
+    component = shallow(<{{camelcase name}} {...props} />);
   }
 
   function thenItMatchSnapshot() {
